[PSPRODUCT-5069] white-space: nowrap to fixed width

--- a/src/styles/mixins/payment-button.scss
+++ b/src/styles/mixins/payment-button.scss
@@ -62,7 +62,7 @@
     position: absolute;
     top: 49%;
     left: 50%;
-    white-space: nowrap;
+    width: 80%;
     transform: translate(-50%, -50%);
 
     & > span {
